--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+# vim swap files
+*.swp
