--- a/build.gradle
+++ b/build.gradle
@@ -5,5 +5,7 @@ repositories {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
+    compile 'org.apache.commons:commons-lang3:3.0'
+    testCompile 'org.testng:testng:6.9.6'
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
